Bug #12992 Cluster StopOnError = Y restarts ndbd indefinitly
Submitted: 5 Sep 2005 13:14 Modified: 8 Sep 2005 9:20
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.14 OS:
Assigned to: Tomas Ulin Target Version:

[5 Sep 2005 13:14] Tomas Ulin
Description:
Cluster StopOnError = Y restarts ndbd indefinitly

How to repeat:
Cluster StopOnError = Y restarts ndbd indefinitly

Suggested fix:
If cluster failes during startup more than 3 times, do not attempt another restart
[5 Sep 2005 13:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29323
[6 Sep 2005 19:45] Tomas Ulin
the following procedure was introduced to avoid indefinite restarts during failed
startups:

A node will only try to restart 3 times with consecutive failures during startup.  Upon
succesful startup thid counter will be reset.

fixed in 4.1.15 and 5.0.13
[8 Sep 2005 9:20] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 4.1.15 and 5.0.13 changelogs. Closed.