Bug #12992  Cluster StopOnError = Y restarts ndbd indefinitly